src/ANTLR/projetCompilParser.java
package ANTLR;// Generated from C:/Users/pc/IdeaProjects/projetCompil\projetCompil.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class projetCompilParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, WS=8, COMPIL=9, 
		INT=10, FLOAT=11, STRING=12, SCAN=13, PRINT=14, START=15, IF=16, THEN=17, 
		ELSE=18, DO=19, WHILE=20, INTEGERVAL=21, FLOATVAL=22, STRINGVAL=23, NAMEPROG=24, 
		ID=25, AFF=26, PLUS=27, MINUS=28, MUL=29, DIV=30, SUP=31, INF=32, SUPE=33, 
		INFE=34, EQ=35, DIF=36;
	public static final int
		RULE_tinyLang = 0, RULE_decList = 1, RULE_dec = 2, RULE_type = 3, RULE_var = 4, 
		RULE_instsList = 5, RULE_inst = 6, RULE_affect = 7, RULE_suite_operation = 8, 
		RULE_suite_operation2 = 9, RULE_operateurP = 10, RULE_operateurM = 11, 
		RULE_operand = 12, RULE_val = 13, RULE_ifinst = 14, RULE_cond = 15, RULE_op = 16, 
		RULE_dowhile_inst = 17, RULE_read = 18, RULE_write = 19, RULE_chaine = 20, 
		RULE_listID = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"tinyLang", "decList", "dec", "type", "var", "instsList", "inst", "affect", 
			"suite_operation", "suite_operation2", "operateurP", "operateurM", "operand", 
			"val", "ifinst", "cond", "op", "dowhile_inst", "read", "write", "chaine", 
			"listID"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "';'", "','", "');'", null, "'compil'", 
			"'intCompil'", "'floatCompil'", "'StringCompil'", "'scanCompil'", "'printCompil'", 
			"'start'", "'if'", "'then'", "'else'", "'do'", "'while'", null, null, 
			"'.*'", null, null, "'='", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", 
			"'>='", "'<='", "'=='", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "WS", "COMPIL", "INT", 
			"FLOAT", "STRING", "SCAN", "PRINT", "START", "IF", "THEN", "ELSE", "DO", 
			"WHILE", "INTEGERVAL", "FLOATVAL", "STRINGVAL", "NAMEPROG", "ID", "AFF", 
			"PLUS", "MINUS", "MUL", "DIV", "SUP", "INF", "SUPE", "INFE", "EQ", "DIF"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "projetCompil.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public projetCompilParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class TinyLangContext extends ParserRuleContext {
		public TerminalNode COMPIL() { return getToken(projetCompilParser.COMPIL, 0); }
		public TerminalNode NAMEPROG() { return getToken(projetCompilParser.NAMEPROG, 0); }
		public DecListContext decList() {
			return getRuleContext(DecListContext.class,0);
		}
		public TerminalNode START() { return getToken(projetCompilParser.START, 0); }
		public InstsListContext instsList() {
			return getRuleContext(InstsListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(projetCompilParser.EOF, 0); }
		public TinyLangContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tinyLang; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).enterTinyLang(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).exitTinyLang(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projetCompilVisitor) return ((projetCompilVisitor<? extends T>)visitor).visitTinyLang(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TinyLangContext tinyLang() throws RecognitionException {
		TinyLangContext _localctx = new TinyLangContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_tinyLang);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(COMPIL);
			setState(45);
			match(NAMEPROG);
			setState(46);
			match(T__0);
			setState(47);
			match(T__1);
			setState(48);
			match(T__2);
			setState(49);
			decList();
			setState(50);
			match(START);
			setState(51);
			instsList();
			setState(52);
			match(T__3);
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecListContext extends ParserRuleContext {
		public DecContext dec() {
			return getRuleContext(DecContext.class,0);
		}
		public DecListContext decList() {
			return getRuleContext(DecListContext.class,0);
		}
		public DecListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).enterDecList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).exitDecList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projetCompilVisitor) return ((projetCompilVisitor<? extends T>)visitor).visitDecList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecListContext decList() throws RecognitionException {
		DecListContext _localctx = new DecListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decList);
		try {
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				dec();
				setState(56);
				decList();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				dec();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public DecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).enterDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).exitDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projetCompilVisitor) return ((projetCompilVisitor<? extends T>)visitor).visitDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecContext dec() throws RecognitionException {
		DecContext _localctx = new DecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			type();
			setState(63);
			var();
			setState(64);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(projetCompilParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(projetCompilParser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(projetCompilParser.STRING, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projetCompilVisitor) return ((projetCompilVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(projetCompilParser.ID, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projetCompilVisitor) return ((projetCompilVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var);
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				match(ID);
				setState(69);
				match(T__5);
				setState(70);
				var();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstsListContext extends ParserRuleContext {
		public InstContext inst() {
			return getRuleContext(InstContext.class,0);
		}
		public InstsListContext instsList() {
			return getRuleContext(InstsListContext.class,0);
		}
		public InstsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instsList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).enterInstsList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).exitInstsList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projetCompilVisitor) return ((projetCompilVisitor<? extends T>)visitor).visitInstsList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstsListContext instsList() throws RecognitionException {
		InstsListContext _localctx = new InstsListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_instsList);
		try {
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				inst();
				setState(75);
				instsList();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				inst();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstContext extends ParserRuleContext {
		public AffectContext affect() {
			return getRuleContext(AffectContext.class,0);
		}
		public IfinstContext ifinst() {
			return getRuleContext(IfinstContext.class,0);
		}
		public Dowhile_instContext dowhile_inst() {
			return getRuleContext(Dowhile_instContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public InstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).enterInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).exitInst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projetCompilVisitor) return ((projetCompilVisitor<? extends T>)visitor).visitInst(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstContext inst() throws RecognitionException {
		InstContext _localctx = new InstContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_inst);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				affect();
				}
				break;
			case IF:
			case ELSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				ifinst();
				}
				break;
			case DO:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				dowhile_inst();
				}
				break;
			case SCAN:
				enterOuterAlt(_localctx, 4);
				{
				setState(84);
				read();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 5);
				{
				setState(85);
				write();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AffectContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(projetCompilParser.ID, 0); }
		public TerminalNode AFF() { return getToken(projetCompilParser.AFF, 0); }
		public Suite_operationContext suite_operation() {
			return getRuleContext(Suite_operationContext.class,0);
		}
		public AffectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).enterAffect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).exitAffect(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projetCompilVisitor) return ((projetCompilVisitor<? extends T>)visitor).visitAffect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AffectContext affect() throws RecognitionException {
		AffectContext _localctx = new AffectContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_affect);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(ID);
			setState(89);
			match(AFF);
			setState(90);
			suite_operation(0);
			setState(91);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Suite_operationContext extends ParserRuleContext {
		public Suite_operation2Context suite_operation2() {
			return getRuleContext(Suite_operation2Context.class,0);
		}
		public Suite_operationContext suite_operation() {
			return getRuleContext(Suite_operationContext.class,0);
		}
		public OperateurPContext operateurP() {
			return getRuleContext(OperateurPContext.class,0);
		}
		public Suite_operationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_suite_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).enterSuite_operation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).exitSuite_operation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projetCompilVisitor) return ((projetCompilVisitor<? extends T>)visitor).visitSuite_operation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Suite_operationContext suite_operation() throws RecognitionException {
		return suite_operation(0);
	}

	private Suite_operationContext suite_operation(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Suite_operationContext _localctx = new Suite_operationContext(_ctx, _parentState);
		Suite_operationContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_suite_operation, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(94);
			suite_operation2(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(102);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Suite_operationContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_suite_operation);
					setState(96);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(97);
					operateurP();
					setState(98);
					suite_operation2(0);
					}
					} 
				}
				setState(104);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Suite_operation2Context extends ParserRuleContext {
		public OperandContext operand() {
			return getRuleContext(OperandContext.class,0);
		}
		public Suite_operation2Context suite_operation2() {
			return getRuleContext(Suite_operation2Context.class,0);
		}
		public OperateurMContext operateurM() {
			return getRuleContext(OperateurMContext.class,0);
		}
		public Suite_operation2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_suite_operation2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).enterSuite_operation2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).exitSuite_operation2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projetCompilVisitor) return ((projetCompilVisitor<? extends T>)visitor).visitSuite_operation2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Suite_operation2Context suite_operation2() throws RecognitionException {
		return suite_operation2(0);
	}

	private Suite_operation2Context suite_operation2(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Suite_operation2Context _localctx = new Suite_operation2Context(_ctx, _parentState);
		Suite_operation2Context _prevctx = _localctx;
		int _startState = 18;
		enterRecursionRule(_localctx, 18, RULE_suite_operation2, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(106);
			operand();
			}
			_ctx.stop = _input.LT(-1);
			setState(114);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Suite_operation2Context(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_suite_operation2);
					setState(108);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(109);
					operateurM();
					setState(110);
					operand();
					}
					} 
				}
				setState(116);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class OperateurPContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(projetCompilParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(projetCompilParser.MINUS, 0); }
		public OperateurPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operateurP; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).enterOperateurP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).exitOperateurP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projetCompilVisitor) return ((projetCompilVisitor<? extends T>)visitor).visitOperateurP(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperateurPContext operateurP() throws RecognitionException {
		OperateurPContext _localctx = new OperateurPContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_operateurP);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_la = _input.LA(1);
			if ( !(_la==PLUS || _la==MINUS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperateurMContext extends ParserRuleContext {
		public TerminalNode MUL() { return getToken(projetCompilParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(projetCompilParser.DIV, 0); }
		public OperateurMContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operateurM; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).enterOperateurM(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).exitOperateurM(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projetCompilVisitor) return ((projetCompilVisitor<? extends T>)visitor).visitOperateurM(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperateurMContext operateurM() throws RecognitionException {
		OperateurMContext _localctx = new OperateurMContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_operateurM);
		try {
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGERVAL:
			case FLOATVAL:
			case STRINGVAL:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case MUL:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				match(MUL);
				}
				break;
			case DIV:
				enterOuterAlt(_localctx, 3);
				{
				setState(121);
				match(DIV);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperandContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(projetCompilParser.ID, 0); }
		public ValContext val() {
			return getRuleContext(ValContext.class,0);
		}
		public OperandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).enterOperand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).exitOperand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projetCompilVisitor) return ((projetCompilVisitor<? extends T>)visitor).visitOperand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperandContext operand() throws RecognitionException {
		OperandContext _localctx = new OperandContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_operand);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(ID);
				}
				break;
			case INTEGERVAL:
			case FLOATVAL:
			case STRINGVAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				val();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValContext extends ParserRuleContext {
		public TerminalNode INTEGERVAL() { return getToken(projetCompilParser.INTEGERVAL, 0); }
		public TerminalNode FLOATVAL() { return getToken(projetCompilParser.FLOATVAL, 0); }
		public TerminalNode STRINGVAL() { return getToken(projetCompilParser.STRINGVAL, 0); }
		public ValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_val; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).enterVal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projetCompilListener) ((projetCompilListener)listener).exitVal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof projetCompilVisitor) return ((projetCompilVisitor<? extends T>)visitor).visitVal(this);
			else return visitor.visitChildren(this);
		}
	}
